--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "storybook": "^6.3.8",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
@@ -76,5 +77,8 @@
     "@storybook/node-logger": "^6.3.8",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.8"
+  },
+  "optionalDependencies": {
+    "babel-loader": "8.1.0"
   }
 }
